# granville

./: .gitignore  CLAUDE.md  Makefile  README.md  build.zig  build.zig.zon  install.sh  pyproject.toml  registry.json
.github/workflows/: ci.yml  release.yml
src/: cli.zig  download.zig  driver.zig  main.zig  model_pool.zig  protocol.zig  root.zig  scheduler.zig  server.zig
tests/: integration_test.py  test_parallel_capacity.py  test_ranking.py
